# Bible4TUI

./: Cargo.toml  default.nix  flake.nix
docs/: CHANGELOG.md  README.md  TODO.md
src/: logic.rs  main.rs  ui.rs
src/logic/: mod.rs
src/ui/: mod.rs
