[package]
authors = ["SchweGELBin <schwegelbin@gmail.com>"]
edition = "2024"
name = "bible4tui"
version = "0.2.0"

[dependencies]
color-eyre = "^0.6"
ratatui = "^0.30"
reqwest = { version = "^0.13", default-features = false, features = ["blocking", "json", "rustls"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
sha256 = "^1.6"
